--- a/css/global.css
+++ b/css/global.css
@@ -14,7 +14,7 @@
 }
 
 #sidebarLX {
-    background-color: yellow;
+    background-color: white;
     height: auto;
     width: 15%;
     float: left;
