--- a/css/global.css
+++ b/css/global.css
@@ -1,33 +1,39 @@
-* { margin: 0 0 0 0; text-align: center; }
-
-#page {
-    background-color: grey;
-    width: 100%;
+html,body{
+	height:100%;
+}
+div#page{
+    position:relative; 
+    width: 100%; 
+    height: auto !important;
     height: 100%;
+    min-height:100%;
 }
-
-#header {
-    background-color: white;
-    height: 20%;
+div#header{
+    padding: 20px;
+    height:100px;
+    width:990px;
+    margin:0 auto;
+    background:#8DB7E0;
+    color: white;
+    border-radius: 20px;
 }
-
-#sidebarLX {
-    background-color: yellow;
-    height: auto;
-    width: 15%;
-    float: left;
+div#content{
+    padding: 0 0 100px 0;
+    width:990px;
+    margin:0 auto;
 }
-
-#content {
-    background-color: red;
-    width: 85%;
-    height: 70%;
-    float: left;
+div#footer{
+    background:#8DB7E0;
+    bottom:0;
+    height:100px;
+    position:absolute;
+    width:100%;
+    text-align:center;
+    border-radius: 20px;
 }
-
-#footer {
-    background-color: green;
-    width: 100%;
-    height: 10%;
-    clear: both;
+div#login{
+    align: center;
+}
+.menu-item {
+    padding: 5px;
 }
